--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     <script src="cordova.js"></script>
     <script src="lib\angular-elastic\elastic.js"></script>
     <script src="lib\xml2json\xml2json.min.js"></script>
+    <script src="lib\angular-storage\angular-storage.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
