--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="lib/ng-tags-input/ng-tags-input.min.css" rel="stylesheet" >
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -14,9 +15,10 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-    <script src="lib\angular-elastic\elastic.js"></script>
-    <script src="lib\xml2json\xml2json.min.js"></script>
-    <script src="lib\angular-storage\angular-storage.js"></script>
+    <script src="lib/angular-elastic/elastic.js"></script>
+    <script src="lib/xml2json/xml2json.min.js"></script>
+    <script src="lib/angular-storage/angular-storage.js"></script>
+    <script src="lib/ng-tags-input/ng-tags-input.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
