--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="lib/ng-tags-input/ng-tags-input.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -18,6 +19,7 @@
     <script src="lib/angular-elastic/elastic.js"></script>
     <script src="lib/xml2json/xml2json.min.js"></script>
     <script src="lib/angular-storage/angular-storage.js"></script>
+    <script src="lib/ng-tags-input/ng-tags-input.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
