--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllers/case-controller.js"></script>
 </head>
 <body ng-app="okarito">
     <ion-nav-view></ion-nav-view>
