Started implementing token login

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/case-controller.js"></script>
+    <script src="js/controllers/login-controller.js"></script>
 </head>
 <body ng-app="okarito">
     <ion-nav-view></ion-nav-view>
