Broke cases controller into separate file

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/controllers/case-controller.js"></script>
     <script src="js/controllers/login-controller.js"></script>
+    <script src="js/controllers/cases-controller.js"></script>
 </head>
 <body ng-app="okarito">
     <ion-nav-view></ion-nav-view>
